# diet-assistant

./: .gitignore  AGENTS.md  HARNESS.md  README.md  pyproject.toml
.agents/skills/record-meal/: SKILL.md
.agents/skills/verify/: SKILL.md
.agents/skills/write-report/: SKILL.md
.claude/: settings.json
.claude/skills/: record-meal  write-report
.codex/: hooks.json
.codex/hooks/: lint-on-stop.sh
config/: profile.example.json
docs/: design.md
docs/adr/: 0001-migrations-in-code.md  0002-profile-schema-as-source-of-truth.md  0003-cap-calorie-deficit.md  0004-routine-as-ordered-steps.md  0005-report-day-start-time.md  README.md
migrations/: 001_initial.sql  002_add_sodium.sql  004_add_fiber.sql
src/diet_assistant/: __init__.py  cli.py  config.py  db.py  profile.schema.json  repository.py  util.py
src/diet_assistant/services/: advice.py  intake.py  maintenance.py  planning.py  reporting.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
